<resources>
    <string name="app_name">Calcular Resistencia</string>
    <string name="cero">0</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>

    <string name="pcero">x10^0</string>
    <string name="puno">x10^1</string>
    <string name="pdos">x10^2</string>
    <string name="ptres">x10^3</string>
    <string name="pcuatro">x10^4</string>
    <string name="pcinco">x10^5</string>
    <string name="pseis">x10^6</string>
    <string name="psiete">x10^7</string>
    <string name="pocho">x10^8</string>
    <string name="pnueve">x10^9</string>
    <string name="pmuno">x10^-1</string>
    <string name="pmdos">x10^-2</string>


    <string name="tolcafe"> ±1%</string>
    <string name="tolrojo"> ±2%</string>
    <string name="tolverde"> ±0.5%</string>
    <string name="tolazul"> ±0.25%</string>
    <string name="tolmorado"> ±0.1%</string>
    <string name="tolgris"> ±0.05%</string>
    <string name="toldorado"> ±5%</string>
    <string name="tolplata"> ±10%</string>

    <string name="inicio_result">10 Ω±1%</string>
</resources>